# robit

./: .cursorignore  .gitignore  README.md  index.html  move_to_other_drive.bat  package-lock.json  package.json
scripts/: prepare-helper-sidecar.mjs  tauri-build.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: elevated.rs  journal.rs  locks.rs  mod.rs  models.rs  pathing.rs  robocopy.rs
